--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <p id="finalPrice"></p>
+    <div id="finalPrice"></div>
+    <div id="totalDiscount"></div>
     <script src="js/app.js"></script>
 </body>
 
